--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 # Copy this file to .env and adjust values
 PORT=4000
-MONGO_URI=mongodb://127.0.0.1:27017/hackmate
+# Mongo connection string
+# Local example: mongodb://127.0.0.1:27017/hackmate
+# Hosted example (Atlas): mongodb+srv://<user>:<pass>@cluster.example.mongodb.net/hackmate?retryWrites=true&w=majority
+MONGO_URI=
 JWT_SECRET=supersecretchangeme
