--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 # Copy this file to .env and adjust values
 PORT=4000
-MONGO_URI=mongodb://127.0.0.1:27017/hackmate
+# Mongo connection string (do not leave blank in production)
+# Example local: mongodb://127.0.0.1:27017/hackmate
+# Example hosted: mongodb+srv://<user>:<pass>@cluster.example.mongodb.net/hackmate?retryWrites=true&w=majority
+MONGO_URI=
 JWT_SECRET=supersecretchangeme
